# chal

./: Cargo.toml  LICENSE_MIT
src/: canvas.rs  engine.rs  lib.rs  mesh-non-skinned-fragment.glsl  mesh-non-skinned-vertex.glsl  quad-fragment.glsl  quad-vertex.glsl  shader.rs
src/render/: component.rs  mesh.rs  mod.rs
